# onTong

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile.backend  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml
agentic-workflow/: README.md
backend/: main.py  ontong.md
data/: users.json
docs/: agent-architecture.md  api-reference.md  deployment.md  environment-variables.md  getting-started.md  section1-wiki.md  section2-modeling.md  section3-developer-guide.md  section3-requirements.md  section3-roadmap.md  section3-user-guide.md  skill-authoring.md  tech-stack.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
scripts/: check-external-deps.sh  create_image_test_data.py  migrate_acl.py
tests/: bench_rag_latency.py  test_acl_v2.py  test_ag14_structured_summary.py  test_ag16_topic_shift.py  test_ag23_skill_feedback.py  test_ag31_session_persistence.py  test_ag32_skill_permissions.py  test_ag33_hooks.py  test_ag41_react_loop.py  test_approval_service.py  test_auto_tag_quality.py  test_change_detector.py  test_code_graph.py  test_confidence.py  test_deprecation_side_effects.py  test_engine_api.py  test_git_connector.py  test_group_api.py  test_group_store.py  test_hybrid_search.py  test_image_analysis.py  test_image_registry.py  test_java_parser.py  test_lineage_validation.py  test_mapping_service.py  test_metadata_index_enriched.py  test_modeling_api.py  test_modeling_e2e.py  test_neo4j_client.py  test_noop_provider.py  test_ontology_store.py  test_p2b1_conflict_detection.py  test_p2b2_status_field.py  test_p2b3_conflict_dashboard.py  test_p2b5_lineage.py  test_p2b6_deprecated_filter.py  test_p2b7_dashboard_resolved.py  test_p5a1_lazy_tree.py  test_p5a2_server_search.py  test_p5b2_async_indexing.py  (+23 more)
(+478 files in other folders)
